fix angular app - home, login

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="lib/css/drp-dropdown.css">
-	<link rel="stylesheet" type="text/css" href="lib/fonts/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="lib/js/jquery.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
-	<title>i3albo</title>
-</head>
-<body>
-
 <form class="center-block v-center">
-	<img src="assets/img/logo.jpg" class="center-block center-logo">
+	<img src="assets/img/logo_b.png" class="center-block center-logo">
 
 	<div class="mt50"></div>
 
@@ -45,5 +30,3 @@
 	<p>copyright 2018 &copy; i3albo</p>
 </div>
 <script src="assets/js/requests/login.js"></script>
-</body>
-</html>
