addto nav - plus, filter

--- a/src/views/app/nav.html
+++ b/src/views/app/nav.html
@@ -1,4 +1,12 @@
 <div class="nav-me m">
+	<a href="#/app/filter" class="nav-filter">
+		<i class="fa fa-filter fa-2x"></i>
+	</a>
+	<a class="ml10 nav-plus"></a>
+	<a href="#/app/plus">
+		<i class="fa fa-plus fa-2x"></i>
+	</a>
+	<a class="ml10"></a>
 	<a href="#/app/me">
 		<i class="fa fa-user fa-2x"></i>
 	</a>
