--- a/src/views/app.html
+++ b/src/views/app.html
@@ -1,4 +1,223 @@
 <div ng-include src="'views/app/nav.html'"></div>
 
 <div class="mt40 d"></div>
-<h1 class="pull-left">app</h1>
+<h2 class="pull-left title">dashboard</h2>
+
+<br>
+<div class="col-md-12 clearfix"></div>
+
+<div class="col-md-12 section">
+	<h3 class="section-title">tasks</h3>
+	
+	<div class="border">
+		<div class="row col-md-12 preview">
+			<div class="date pull-right text-right pr5">
+				<small>date:</small>
+				<br>
+				26/09/2018
+			</div>
+			
+			<div class="subject pl5">
+				<small>subject:</small>
+				<br>
+				M 226B - Java
+			</div>
+		</div>
+		
+		<div class="row col-md-12 preview">
+			<div class="time pull-right text-right pr5">
+				<small>time:</small>
+				<br>
+				22:00
+			</div>
+			
+			<div class="task-title pl5">
+				<small>title:</small>
+				<br>
+				MyPanelSample
+			</div>
+		</div>
+		
+		<div class="row col-md-12 details">
+			<div class="col-md-12">
+				<div class="col-md-12 border"></div>
+			</div>
+			
+			<div class="col-md-12 pl5">
+				<small>author:</small>
+				giuliobosco
+			</div>
+			
+			
+			<div class="col-md-12 pl5">
+				<small>description:</small>
+				<br>
+				<div class="p5">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis nisi nec condimentum gravida.
+					Maecenas tortor sapien, suscipit et lacinia sit amet, venenatis a nunc. Quisque id urna ultrices,
+					aliquam urna vitae, fermentum elit. Suspendisse vel iaculis diam.
+				</div>
+			</div>
+			
+			<div>
+				<a class="col-xs-4 text-center">&nbsp;</a>
+				<a class="col-xs-4 text-center">edit <i class="fa fa-edit"></i></a>
+				<a class="col-xs-4 text-center">delete <i class="fa fa-times"></i></a>
+			</div>
+		</div>
+	</div>
+	
+	<div class="border">
+		<div class="row col-md-12 preview">
+			<div class="date pull-right text-right pr5">
+				<small>date:</small>
+				<br>
+				26/09/2018
+			</div>
+			
+			<div class="subject pl5">
+				<small>subject:</small>
+				<br>
+				M 226B - Java
+			</div>
+		</div>
+		
+		<div class="row col-md-12 preview">
+			<div class="time pull-right text-right pr5">
+				<small>time:</small>
+				<br>
+				22:00
+			</div>
+			
+			<div class="task-title pl5">
+				<small>title:</small>
+				<br>
+				MyPanelSample
+			</div>
+		</div>
+		
+		<div class="row col-md-12 details">
+			<div class="col-md-12">
+				<div class="col-md-12 border"></div>
+			</div>
+			
+			<div class="col-md-12 pl5">
+				<small>author:</small>
+				giuliobosco
+			</div>
+			
+			
+			<div class="col-md-12 pl5">
+				<small>description:</small>
+				<br>
+				<div class="p5">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis nisi nec condimentum gravida.
+					Maecenas tortor sapien, suscipit et lacinia sit amet, venenatis a nunc. Quisque id urna ultrices,
+					aliquam urna vitae, fermentum elit. Suspendisse vel iaculis diam.
+				</div>
+			</div>
+			
+			<div>
+				<a class="col-xs-4 text-center">&nbsp;</a>
+				<a class="col-xs-4 text-center">edit <i class="fa fa-edit"></i></a>
+				<a class="col-xs-4 text-center">delete <i class="fa fa-times"></i></a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="col-md-12 section">
+	<h3 class="section-title">tests</h3>
+	
+	<div class="border">
+		<div class="row col-md-12 preview">
+			<div class="date pull-right text-right pr5">
+				<small>date:</small>
+				<br>
+				26/09/2018
+			</div>
+			
+			<div class="subject pl5">
+				<small>subject:</small>
+				<br>
+				M 226B - Java
+			</div>
+		</div>
+		
+		<div class="row col-md-12 details">
+			<div class="col-md-12">
+				<div class="col-md-12 border"></div>
+			</div>
+			
+			<div class="col-md-12 pl5">
+				<small>author:</small>
+				giuliobosco
+			</div>
+			
+			
+			<div class="col-md-12 pl5">
+				<small>description:</small>
+				<br>
+				<div class="p5">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis nisi nec condimentum gravida.
+					Maecenas tortor sapien, suscipit et lacinia sit amet, venenatis a nunc. Quisque id urna ultrices,
+					aliquam urna vitae, fermentum elit. Suspendisse vel iaculis diam.
+				</div>
+			</div>
+			
+			<div>
+				<a class="col-xs-4 text-center">&nbsp;</a>
+				<a class="col-xs-4 text-center">edit <i class="fa fa-edit"></i></a>
+				<a class="col-xs-4 text-center">delete <i class="fa fa-times"></i></a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="col-md-12 section">
+	<h3 class="section-title">events</h3>
+	
+	<div class="border">
+		<div class="row col-md-12 preview">
+			<div class="date pull-right text-right pr5">
+				<small>date:</small>
+				<br>
+				26/09/2018
+			</div>
+			
+			<div class="subject pl5">
+				<small>title:</small>
+				<br>
+				Title
+			</div>
+		</div>
+		
+		<div class="row col-md-12 details">
+			<div class="col-md-12">
+				<div class="col-md-12 border"></div>
+			</div>
+			
+			<div class="col-md-12 pl5">
+				<small>author:</small>
+				giuliobosco
+			</div>
+			
+			
+			<div class="col-md-12 pl5">
+				<small>description:</small>
+				<br>
+				<div class="p5">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis nisi nec condimentum gravida.
+					Maecenas tortor sapien, suscipit et lacinia sit amet, venenatis a nunc. Quisque id urna ultrices,
+					aliquam urna vitae, fermentum elit. Suspendisse vel iaculis diam.
+				</div>
+			</div>
+			
+			<div>
+				<a class="col-xs-4 text-center">&nbsp;</a>
+				<a class="col-xs-4 text-center">edit <i class="fa fa-edit"></i></a>
+				<a class="col-xs-4 text-center">delete <i class="fa fa-times"></i></a>
+			</div>
+		</div>
+	</div>
+</div>
