fix dashboard - set controller

--- a/src/views/app.html
+++ b/src/views/app.html
@@ -6,7 +6,7 @@
 <br>
 <div class="col-md-12 clearfix"></div>
 
-<div class="col-md-12 section">
+<div class="col-md-12 section" ng-controller="DashTasksController">
 	<h3 class="section-title">tasks</h3>
 	
 	<div class="border" ng-repeat="dashTask in dashTasks">
