fix dashboard - test fileds name

--- a/src/views/app.html
+++ b/src/views/app.html
@@ -96,7 +96,7 @@
 			
 			
 			<div class="col-md-12 pl5">
-				<small>description:</small>
+				<small>arguments:</small>
 				<br>
 				<div class="p5">
 					{{dashTest.arguments}}
